# MCP-Dummy

./: .gitignore  client.py  main.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
