[project]
name = "mcp-dummy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.2",
    "langchain-groq>=0.3.5",
    "langchain-mcp-adapters>=0.1.8",
    "langgraph>=0.5.1",
    "mcp>=1.10.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
